# docker-course-1

./: Dockerfile  README.md  displayImages.h  matplotlibcpp.h  script.sh
sampleCode/CMake/: CMakeLists.txt  main.cpp
sampleCode/Notebook/: Course1_CPP_Sample_Notebook.ipynb  Course1_PY3_Sample_Notebook.ipynb
